# rpi-hardware-monitor-ros

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: ci.yml
rpi_hw_monitor/: CMakeLists.txt  package.xml
rpi_hw_monitor/config/: params.yml
rpi_hw_monitor/launch/: __init__.pyi  hw_monitor_launch.py
rpi_hw_monitor/msg/: HardwareStatus.msg  __init__.pyi
rpi_hw_monitor/scripts/: hw_monitor.py
scripts/: conda-env.yml  source.sh
