<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpi_hw_monitor</name>
  <version>0.1.0</version>
  <description>Hardware Monitor for RPi</description>
  <maintainer email="henrik.toikka@aalto.fi">htoik</maintainer>
  <license>MIT License</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
